--- a/Frontend/prontuario.html
+++ b/Frontend/prontuario.html
@@ -16,13 +16,13 @@
             <input type="date" name="dataNasc">
             <br>
             <label for="telefone">Telefone: </label>
-            <input type="number" name="telefone">
+            <input type="text" name="telefone">
             <br>
             <label for="email">Email:</label>
             <input type="email" name="email">
             <br>
             <label for="cpf">CPF:</label>
-            <input type="number" name="cpf">
+            <input type="text" name="cpf">
             <br>
             <label for="senha">Senha: </label>
             <input type="password" name="senha">
@@ -34,7 +34,7 @@
             </select>
             <br>
             <label for="altura">Altura: (em cm) </label>
-            <input type="number">
+            <input type="number" step="0.01">
             <br>
             <label for="notas">Notas Adicionais:</label><br>
             <textarea name="notas" rows="4" cols="50"></textarea><br><br>
